# compnube-imageprocessing

./: CMakeLists.txt  README.md  image_process_parallel.cpp  image_process_sequential.cpp  main.cpp  main_all.cpp  main_cuda.cu  main_mpi.cpp  main_parallel.cpp  main_sequential.cpp
includes/: image_process_cuda.h  image_process_mpi.h  image_process_parallel.h  image_process_sequential.h  images_process_sequential.h
src/: image_process_cuda.cpp  image_process_cuda.cu  image_process_mpi.cpp  image_process_parallel.cpp  image_process_sequential.cpp
