cmake_minimum_required(VERSION 3.0.0)
project(main VERSION 0.1.0)
set(OpenCV_DIR opencv-4.x-build/)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
find_package(OpenCV REQUIRED)
add_executable(main main.cpp)
target_compile_features(main PRIVATE cxx_std_17)
target_link_libraries(main ${OpenCV_LIBS})
